syntax = "proto3";
package blockpb;

option go_package = "pkg/utils/blockpb";

message BlockInfo {
    int64 block_num = 1;
    string block_hash = 2;
    int64 last_time = 3;
}

message BatchItem {
    int32 id = 1;
    bytes data = 2;
}

message BlockData {
    BlockInfo info = 1;
    repeated BatchItem batch_items = 2;
}

message BlockHeader {
    BlockInfo info = 1;
    repeated BatchItem batch_items = 2;
}